@@ -1,3 +1,9 @@
+== Git
+
+* Minor enhancements
+
+  * Detect infinite redirects and raise a Webrat::InfiniteRedirectError (Daniel Lucraft)
+  
 == 0.4.1 / 2009-01-31
 
 * Minor enhancements
